--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "yarn pm2 start ./dist/bin/www.js --name GlacierAPI",
     "stop": "yarn pm2 stop GlacierAPI",
     "prerestart": "yarn run tsc",
-    "restart": "yarn pm2 restart GlacierAPI"
+    "restart": "yarn pm2 restart GlacierAPI --update-env"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
