--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "author": "YUJI",
   "license": "MIT",
   "scripts": {
-    "prestart": "yarn run tsc",
+    "prestart": "yarn tsc",
     "start": "yarn pm2 start ./dist/bin/www.js --name GlacierAPI",
     "stop": "yarn pm2 stop GlacierAPI",
-    "prerestart": "yarn run tsc",
+    "prerestart": "yarn tsc",
     "restart": "yarn pm2 restart GlacierAPI --update-env"
   },
   "dependencies": {
