--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "express-session": "^1.17.0",
+    "helmet": "^3.21.3",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
     "mongoose": "^5.9.2",
     "morgan": "~1.9.1",
     "newsapi": "^2.4.0",
     "passport": "^0.4.1",
     "passport-twitter": "^1.0.4",
+    "pug": "^2.0.4",
     "socket.io": "^2.3.0",
     "twitter": "^1.7.1",
     "uuid": "^7.0.1",
@@ -38,6 +39,7 @@
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.2",
     "@types/express-session": "^1.15.16",
+    "@types/helmet": "^0.0.45",
     "@types/http-errors": "^1.6.3",
     "@types/mongoose": "^5.7.1",
     "@types/morgan": "^1.7.37",
@@ -47,7 +49,6 @@
     "@types/twitter": "^1.7.0",
     "@types/uuid": "^7.0.0",
     "@types/xss-filters": "^0.0.27",
-    "express-generator": "^4.16.1",
     "pm2": "^4.2.3",
     "typescript": "^3.8.2"
   }
