--- a/package.json
+++ b/package.json
@@ -14,43 +14,43 @@
     "restart": "yarn pm2 restart GlacierAPI --update-env"
   },
   "dependencies": {
-    "connect-mongo": "^3.2.0",
-    "cookie-parser": "~1.4.4",
-    "cors": "^2.8.5",
-    "debug": "~2.6.9",
-    "dotenv": "^8.2.0",
-    "express": "~4.16.1",
-    "express-session": "^1.17.0",
-    "helmet": "^3.21.3",
-    "http-errors": "~1.6.3",
-    "mongoose": "^5.9.2",
-    "morgan": "~1.9.1",
-    "newsapi": "^2.4.0",
-    "passport": "^0.4.1",
-    "passport-twitter": "^1.0.4",
-    "pug": "^2.0.4",
-    "socket.io": "^2.3.0",
-    "twitter": "^1.7.1",
-    "uuid": "^7.0.1",
-    "xss-filters": "^1.2.7"
+    "connect-mongo": "*",
+    "cookie-parser": "*",
+    "cors": "*",
+    "debug": "*",
+    "dotenv": "*",
+    "express": "*",
+    "express-session": "*",
+    "helmet": "*",
+    "http-errors": "*",
+    "mongoose": "*",
+    "morgan": "*",
+    "newsapi": "*",
+    "passport": "*",
+    "passport-twitter": "*",
+    "pug": "*",
+    "socket.io": "*",
+    "twitter": "*",
+    "uuid": "*",
+    "xss-filters": "*"
   },
   "devDependencies": {
-    "@types/cookie-parser": "^1.4.2",
-    "@types/cors": "^2.8.6",
-    "@types/debug": "^4.1.5",
-    "@types/express": "^4.17.2",
-    "@types/express-session": "^1.15.16",
-    "@types/helmet": "^0.0.45",
-    "@types/http-errors": "^1.6.3",
-    "@types/mongoose": "^5.7.1",
-    "@types/morgan": "^1.7.37",
-    "@types/node": "^13.7.4",
-    "@types/passport-twitter": "^1.0.34",
-    "@types/socket.io": "^2.1.4",
-    "@types/twitter": "^1.7.0",
-    "@types/uuid": "^7.0.0",
-    "@types/xss-filters": "^0.0.27",
-    "pm2": "^4.2.3",
-    "typescript": "^3.8.2"
+    "@types/cookie-parser": "*",
+    "@types/cors": "*",
+    "@types/debug": "*",
+    "@types/express": "*",
+    "@types/express-session": "*",
+    "@types/helmet": "*",
+    "@types/http-errors": "*",
+    "@types/mongoose": "*",
+    "@types/morgan": "*",
+    "@types/node": "*",
+    "@types/passport-twitter": "*",
+    "@types/socket.io": "*",
+    "@types/twitter": "*",
+    "@types/uuid": "*",
+    "@types/xss-filters": "*",
+    "pm2": "*",
+    "typescript": "*"
   }
 }
