Update docker files

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,33 +1,25 @@
-// If you want to run as a non-root user in the container, see .devcontainer/docker-compose.yml.
+// For format details, see https://aka.ms/vscode-remote/devcontainer.json or this file's README at:
+// https://github.com/microsoft/vscode-dev-containers/tree/v0.106.0/containers/javascript-node-12
 {
-	"name": "Node.js & Mongo DB",
-	"dockerComposeFile": "docker-compose.yml",
-	"service": "web",
-	"workspaceFolder": "/workspace",
+	"name": "Node.js 12",
+	"dockerFile": "Dockerfile",
 
-	// Use "settings" to set *default* container specific settings.json values on container create. 
-	// You can edit these settings after create using File > Preferences > Settings > Remote.
+	// Set *default* container specific settings.json values on container create.
 	"settings": { 
 		"terminal.integrated.shell.linux": "/bin/bash"
 	},
 
-	// Uncomment the next line if you want start specific services in your Docker Compose config.
-	// "runServices": [],
+	// Add the IDs of extensions you want installed when the container is created.
+	"extensions": [
+		"dbaeumer.vscode-eslint"
+	],
 
-	// Uncomment the line below if you want to keep your containers running after VS Code shuts down.
-	// "shutdownAction": "none",
+	// Use 'forwardPorts' to make a list of ports inside the container available locally.
+	"forwardPorts": [3000],
 
-	// Uncomment the next line to run commands after the container is created.
+	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": "yarn install",
 
-	// Uncomment the next line to have VS Code connect as an existing non-root user in the container. See
-	// https://aka.ms/vscode-remote/containers/non-root for details on adding a non-root user if none exist.
-	"remoteUser": "node",
-
-	// Add the IDs of extensions you want installed when the container is created in the array below.
-	"extensions": [
-		"dbaeumer.vscode-eslint",
-		"donjayamanne.githistory",
-		"eamodio.gitlens"
-	]
+	// Uncomment to connect as a non-root user. See https://aka.ms/vscode-remote/containers/non-root.
+	"remoteUser": "node"
 }
