Add new authentication method

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "morgan": "*",
     "newsapi": "*",
     "passport": "*",
+    "passport-local": "*",
     "passport-twitter": "*",
     "pug": "*",
     "redis": "*",
@@ -45,6 +46,7 @@
     "@types/mongoose": "*",
     "@types/morgan": "*",
     "@types/node": "*",
+    "@types/passport-local": "*",
     "@types/passport-twitter": "*",
     "@types/socket.io": "*",
     "@types/twitter": "*",
