--- a/package.json
+++ b/package.json
@@ -14,45 +14,45 @@
     "restart": "NODE_ENV=\"production\" yarn pm2 restart GlacierAPI --update-env"
   },
   "dependencies": {
-    "connect-redis": "*",
-    "cors": "*",
-    "debug": "*",
-    "dotenv": "*",
-    "express": "*",
-    "express-session": "*",
-    "helmet": "*",
-    "http-errors": "*",
-    "mongoose": "*",
-    "morgan": "*",
-    "newsapi": "*",
-    "passport": "*",
-    "passport-local": "*",
-    "passport-twitter": "*",
-    "pug": "*",
-    "redis": "*",
-    "socket.io": "*",
-    "twitter": "*",
-    "uuid": "*",
-    "xss-filters": "*"
+    "connect-redis": "^4.0.4",
+    "cors": "^2.8.5",
+    "debug": "^4.1.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "helmet": "^3.22.0",
+    "http-errors": "^1.7.3",
+    "mongoose": "^5.9.10",
+    "morgan": "^1.10.0",
+    "newsapi": "^2.4.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
+    "pug": "^2.0.4",
+    "redis": "^3.0.2",
+    "socket.io": "^2.3.0",
+    "twitter": "^1.7.1",
+    "uuid": "^8.0.0",
+    "xss-filters": "^1.2.7"
   },
   "devDependencies": {
-    "@types/connect-redis": "*",
-    "@types/cors": "*",
-    "@types/debug": "*",
-    "@types/express": "*",
-    "@types/express-session": "*",
-    "@types/helmet": "*",
-    "@types/http-errors": "*",
-    "@types/mongoose": "*",
-    "@types/morgan": "*",
-    "@types/node": "*",
-    "@types/passport-local": "*",
-    "@types/passport-twitter": "*",
-    "@types/socket.io": "*",
-    "@types/twitter": "*",
-    "@types/uuid": "*",
-    "@types/xss-filters": "*",
-    "pm2": "*",
-    "typescript": "*"
+    "@types/connect-redis": "^0.0.13",
+    "@types/cors": "^2.8.6",
+    "@types/debug": "^4.1.5",
+    "@types/express": "^4.17.6",
+    "@types/express-session": "^1.17.0",
+    "@types/helmet": "^0.0.46",
+    "@types/http-errors": "^1.6.3",
+    "@types/mongoose": "^5.7.14",
+    "@types/morgan": "^1.9.0",
+    "@types/node": "^13.13.4",
+    "@types/passport-local": "^1.0.33",
+    "@types/passport-twitter": "^1.0.34",
+    "@types/socket.io": "^2.1.4",
+    "@types/twitter": "^1.7.0",
+    "@types/uuid": "^7.0.3",
+    "@types/xss-filters": "^0.0.27",
+    "pm2": "^4.4.0",
+    "typescript": "^3.8.3"
   }
 }
