--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "firebase-admin": "^8.11.0",
     "helmet": "^3.22.0",
     "http-errors": "^1.7.3",
     "mongoose": "^5.9.10",
