--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "restart": "NODE_ENV=\"production\" yarn pm2 restart GlacierAPI --update-env"
   },
   "dependencies": {
-    "connect-redis": "^4.0.4",
+    "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
@@ -31,14 +31,12 @@
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
     "pug": "^2.0.4",
-    "redis": "^3.0.2",
     "socket.io": "^2.3.0",
     "twitter": "^1.7.1",
     "uuid": "^8.0.0",
     "xss-filters": "^1.2.7"
   },
   "devDependencies": {
-    "@types/connect-redis": "^0.0.13",
     "@types/cors": "^2.8.6",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.6",
